# rust-pi

./: AGENTS.md  Cargo.toml  README.md
crates/pi-cli/: Cargo.toml
crates/pi-cli/src/: main.rs
crates/pi-cli/tests/: smoke_test.rs
crates/pi-core/: Cargo.toml
crates/pi-core/src/: agent.rs  commands.rs  context.rs  error.rs  external.rs  lib.rs  openrouter.rs  plan.rs  project.rs  prompt.rs  provider.rs  runtime.rs  session.rs  tool_genesis.rs  tool_spec.rs
crates/pi-core/src/tools/: bash.rs  edit.rs  git.rs  mod.rs  planning.rs  read.rs  (+3 more)
crates/pi-core/tests/: agent_loop_test.rs  planning_integration_test.rs
crates/topagent-cli/: Cargo.toml
crates/topagent-cli/src/: config.rs  main.rs  memory.rs  progress.rs  service.rs  telegram.rs
crates/topagent-cli/tests/: service_command_test.rs  smoke_test.rs
crates/topagent-core/: Cargo.toml
crates/topagent-core/src/: agent.rs  approval.rs  behavior.rs  compaction.rs  context.rs  error.rs  external.rs  file_util.rs  hooks.rs  lib.rs  message.rs  openrouter.rs  plan.rs  progress.rs  project.rs  prompt.rs  provider.rs  runtime.rs  secrets.rs  session.rs  task_result.rs  tool_genesis.rs  tool_spec.rs
crates/topagent-core/src/channel/: telegram.rs
crates/topagent-core/src/tool_genesis/: mod.rs
crates/topagent-core/src/tools/: bash.rs  edit.rs  mod.rs  operator_preference.rs  planning.rs  read.rs  save_lesson.rs  save_plan.rs
crates/topagent-core/tests/: agent_loop_test.rs  planning_integration_test.rs  secret_exfiltration_test.rs
docs/: architecture.md  operations.md  overview.md
scripts/: install.sh
