[package]
edition = "2021"
version = "0.1.0"
name = "topagent-core"
repository = "https://github.com/TopWayAI/topagent"

[dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
tokio = { version = "1", features = ["rt", "time", "macros"] }

[dev-dependencies]
tempfile = "3"
